トップイメージ追加

--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -9,6 +9,12 @@
     <li>転職活動中</li>
   </ul>
 <h2 class="subtitle">経歴</h2>
+  <ul class="career_area">
+    <li>横浜創学館高校卒業</li>
+    <li>関東学院大学卒業</li>
+    <li>教員免許取得(地理・歴史)</li>
+    <li>某ディスカウントストア勤務</li>
+  </ul>
 
 <h2 class="subtitle">作品集</h2>
 <div class="over">
