--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -4,15 +4,24 @@
 }
 
 .top_image{
+
+
+}
+
+.title{
+  background-image: url('image4.jpg');
+  background-size: 100vw 100vh;
   width: 100vw;
-  height: 500px;
+  height: 100vh;
+  font-size: 60px;
+  color: white;
 }
 
 .subtitle{
   margin: 50px 20px 0px 20px;
 }
 
-.profile_area{
+.profile_area, .career_area {
   border: solid 1px  black;
 }
 
