--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -1,3 +1,7 @@
+body{
+  background-color: skyblue;
+}
+
 .over{
   display: flex;
   justify-content: space-between;
@@ -20,10 +24,13 @@
 
 .subtitle{
   margin: 50px 20px 0px 20px;
+  font-family: 'HiraMinProN-W3';
+  font-size: 40px;
+  color: white;
 }
 
 .profile_area, .career_area {
-  border: solid 1px  black;
+  border: solid 1px  white;
 }
 
 .work_image{
