--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,6 +1,11 @@
-<h1 class="title">木曽 裕哉のポートフォリオ</h1>
+<h1 class="title">  
+  <a href="#profile">profile</a>
+  <a href="#career">経歴</a>
+  <a href="#item">作品集</a>
+  <br>木曽 裕哉のポートフォリオ
+</h1>
   
-<h2 class="subtitle">plofile</h2>
+<h2 id="profile" class="profile">plofile</h2>
   <ul class="profile_area">
     <li>小売業に約４年勤務</li>
 
@@ -8,7 +13,7 @@
 
     <li>転職活動中</li>
   </ul>
-<h2 class="subtitle">経歴</h2>
+<h2 id="career" class="career">経歴</h2>
   <ul class="career_area">
     <li>横浜創学館高校卒業</li>
     <li>関東学院大学卒業</li>
@@ -16,7 +21,7 @@
     <li>某ディスカウントストア勤務</li>
   </ul>
 
-<h2 class="subtitle">作品集</h2>
+<h2 id="item" class="item">作品集</h2>
 <div class="over">
   <%= link_to image_tag("image1", class: "work_image"), "http://geresuki.herokuapp.com"%>
   <%= image_tag "image2", class: "work_image"%>
