--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -20,7 +20,25 @@ a{
   color: white;
 }
 
-.profile, .career, .item{
+.profile{
+  background-image: url("image6.jpg");
+  background-size: 100vw 100vh;
+  width: 100vw;
+  height: 100vh;
+  margin: 50px 20px 0px 20px;
+  font-family: 'HiraMinProN-W3';
+  font-size: 40px;
+  color: white;
+}
+
+.career{
+  margin: 50px 20px 0px 20px;
+  font-family: 'HiraMinProN-W3';
+  font-size: 40px;
+  color: white;
+}
+
+.item{
   margin: 50px 20px 0px 20px;
   font-family: 'HiraMinProN-W3';
   font-size: 40px;
